--- a/crudUno.html
+++ b/crudUno.html
@@ -19,8 +19,7 @@ Desarrollador: Jean Piere
 <div class="row">
 
     <div class="col auto">
-        <button class="btn btn-success" type="button" data-toggle="modal" data-target="#modalNuevoMaterial"
-            onclick="modalNuevoMaterial()"><i class="fas fa-plus"></i> Nuevo material</button>
+        <button class="btn btn-success" type="button" data-toggle="modal" data-target="#modalNuevoMaterial" onclick="modalNuevoMaterial()"><i class="fas fa-plus"></i> Nuevo material</button>
     </div>
 
     <div class="col auto text-right">
@@ -48,32 +47,27 @@ Desarrollador: Jean Piere
 
     <div class="form-group col-md-1 hidden" id="divAnio">
         <label>Año</label>
-        <select class="form-control selectpicker show-menu-arrow" data-live-search="false" id="selectAnio" data-size="5"
-            onchange="selectedChangeAnio()"></select>
+        <select class="form-control selectpicker show-menu-arrow" data-live-search="false" id="selectAnio" data-size="5" onchange="selectedChangeAnio()"></select>
     </div>
 
     <div class="form-group col-md-1 hidden" id="divSelectedMes">
         <label>Mes</label>
-        <select class="form-control selectpicker show-menu-arrow" data-live-search="true" id="selectMeses" data-size="5"
-            onchange="cargaInformeSeguimiento()"></select>
+        <select class="form-control selectpicker show-menu-arrow" data-live-search="true" id="selectMeses" data-size="5" onchange="cargaInformeSeguimiento()"></select>
     </div>
 
     <div class="form-group col-md-2 hidden" id="divBeneficio">
         <label class="overflow">Centro de beneficio</label>
-        <select class="form-control selectpicker show-menu-arrow" data-live-search="false" id="selectBeneficio"
-            data-size="5" onchange="cargaInformeSeguimiento()"></select>
+        <select class="form-control selectpicker show-menu-arrow" data-live-search="false" id="selectBeneficio" data-size="5" onchange="cargaInformeSeguimiento()"></select>
     </div>
 
     <div class="form-group col-md-2 hidden" id="divMaterial">
         <label class="overflow">Clase de material</label>
-        <select class="form-control selectpicker show-menu-arrow" data-live-search="true" id="selectMaterial"
-            data-size="5" onchange="cargaInformeSeguimiento()"></select>
+        <select class="form-control selectpicker show-menu-arrow" data-live-search="true" id="selectMaterial" data-size="5" onchange="cargaInformeSeguimiento()"></select>
     </div>
 
     <div class="form-group col-md-2 hidden" id="divEstado">
         <label>Estado</label>
-        <select class="form-control selectpicker show-menu-arrow" data-live-search="false" id="selectEstado"
-            data-size="5" onchange="cargaInformeSeguimiento()"></select>
+        <select class="form-control selectpicker show-menu-arrow" data-live-search="false" id="selectEstado" data-size="5" onchange="cargaInformeSeguimiento()"></select>
     </div>
 
 </div>
@@ -134,36 +128,31 @@ Desarrollador: Jean Piere
                             <b style="color: #000">Datos maestro</b>
                             <div class="form-group">
                                 <label>Nombre</label>
-                                <input class="form-control" type="text" maxlength="40" placeholder="Nombre"
-                                    id="txtNombre" oninput="showAlertDescripcion()" required="">
+                                <input class="form-control" type="text" maxlength="40" placeholder="Nombre" id="txtNombre" oninput="showAlertDescripcion()" required="">
                             </div>
 
                             <div class="form-group">
                                 <label>Descripción</label>
-                                <input class="form-control" type="text" maxlength="40" placeholder="Descripción"
-                                    id="txtDescripcion" oninput="showAlertDescripcion()" required="">
+                                <input class="form-control" type="text" maxlength="40" placeholder="Descripción" id="txtDescripcion" oninput="showAlertDescripcion()" required="">
                             </div>
 
                             <div class="form-group">
                                 <div class="row">
                                     <div class="col">
                                         <label>Medida</label>
-                                        <input class="form-control" type="text" maxlength="40" placeholder="Medida"
-                                            id="txtMedida" oninput="showAlertDescripcion()" required="">
+                                        <input class="form-control" type="text" maxlength="40" placeholder="Medida" id="txtMedida" oninput="showAlertDescripcion()" required="">
                                     </div>
 
                                     <div class="col">
                                         <label>Unidad de medida</label>
-                                        <select class="form-control selectpicker show-menu-arrow"
-                                            data-live-search="true" id="selectUnidadDeMedida" data-size="5"></select>
+                                        <select class="form-control selectpicker show-menu-arrow" data-live-search="true" id="selectUnidadDeMedida" data-size="5"></select>
                                     </div>
                                 </div>
                             </div>
 
                             <div class="form-group">
                                 <label>Centro</label>
-                                <select class="form-control selectpicker show-menu-arrow" data-live-search="false"
-                                    id="selectCentroNuevoMaterial" data-size="5"></select>
+                                <select class="form-control selectpicker show-menu-arrow" data-live-search="false" id="selectCentroNuevoMaterial" data-size="5"></select>
                             </div>
                         </div>
 
@@ -173,36 +162,30 @@ Desarrollador: Jean Piere
 
                             <div class="form-group">
                                 <label>Cod fábrica material</label>
-                                <input class="form-control" type="text" placeholder="Cod fábrica material"
-                                    id="txtCodFabricaMat">
+                                <input class="form-control" type="text" placeholder="Cod fábrica material" id="txtCodFabricaMat">
                             </div>
 
                             <div class="form-group">
                                 <label>Descripción fábrica</label>
-                                <input class="form-control" type="text" placeholder="Descripción fábrica"
-                                    id="txtDescripcionFabrica">
+                                <input class="form-control" type="text" placeholder="Descripción fábrica" id="txtDescripcionFabrica">
                             </div>
 
                             <div class="form-group">
                                 <label>Link o contacto compra</label>
-                                <input class="form-control" type="text" placeholder="Link o contacto compra"
-                                    id="txtLinkContacto">
+                                <input class="form-control" type="text" placeholder="Link o contacto compra" id="txtLinkContacto">
                             </div>
 
                             <div class="form-group">
                                 <label>Agregar un archivo</label>
                                 <div class="custom-file" id="divBtnAgregarArchivo">
-                                    <input type="file" class="custom-file-input" id="file"
-                                        accept=".png, .jpg, .jpeg, .pdf, .xls">
-                                    <label class="custom-file-label overflow" for="file"
-                                        data-browse="Buscar archivo"></label>
+                                    <input type="file" class="custom-file-input" id="file" accept=".png, .jpg, .jpeg, .pdf, .xls">
+                                    <label class="custom-file-label overflow" for="file" data-browse="Buscar archivo"></label>
                                 </div>
 
                                 <div class="form-row">
                                     <div class="col-sm-5">
                                         <div class="form-check">
-                                            <input class="form-check-input" type="checkbox" value="1"
-                                                id="checkboxArchivo" checked="true">
+                                            <input class="form-check-input" type="checkbox" value="1" id="checkboxArchivo" checked="true">
                                             <label class="form-check-label" for="flexCheckDefault" id="lblArchivo">
                                                 Guardar archivo </label>
                                         </div>
@@ -226,8 +209,8 @@ Desarrollador: Jean Piere
                     <div class="row">
                         <div class="col-md-6">
                             <div class="alert alert-danger" role="alert" id="alertDescripcion">
-                                <h7 class="alert-heading">La glosa final del material no debe sobrepasar los <b>40</b>
-                                    caracteres.</h7>
+                                <h7 class="alert-heading">La glosa final del material no debe sobrepasar los <b>40</b> caracteres.
+                                </h7>
                                 <br><br>
                                 <center style="line-break: anywhere;"><b>
                                         <h7 class="col-md-6" id="txtAlertDescripcion"></h7>
@@ -247,11 +230,9 @@ Desarrollador: Jean Piere
 
                     <div class="row">
                         <div class="col-md-6">
-                            <label class="overflow" data-toggle="tooltip" data-placement="top"
-                                title="¿Necesita el material permanente o no permanente en bodega?">¿Necesita el
+                            <label class="overflow" data-toggle="tooltip" data-placement="top" title="¿Necesita el material permanente o no permanente en bodega?">¿Necesita el
                                 material permanente o no permanente en bodega?</label>
-                            <select class="form-control selectpicker show-menu-arrow" data-live-search="false"
-                                id="selectPermanencia" data-size="5">
+                            <select class="form-control selectpicker show-menu-arrow" data-live-search="false" id="selectPermanencia" data-size="5">
                                 <option value="0">Seleccione una opción</option>
                                 <option value="1">Permanente</option>
                                 <option value="2">No permanente</option>
@@ -262,8 +243,7 @@ Desarrollador: Jean Piere
                         <div class="d-none col-md-4" id="divSelectPerNoPer">
                             <!-- <label class="overflow" id="lblPerNoPer"> ¿Cómo desea clasificar el material permante?</label> -->
                             <label class="overflow" id="lblPerNoPer">.</label>
-                            <select class="form-control selectpicker show-menu-arrow" data-live-search="false"
-                                id="selectPerNoPer" data-size="5"></select>
+                            <select class="form-control selectpicker show-menu-arrow" data-live-search="false" id="selectPerNoPer" data-size="5"></select>
                         </div>
 
                         <!-- <div class="d-none col-md-5">
@@ -273,8 +253,7 @@ Desarrollador: Jean Piere
 
                         <div class="col-md-2">
                             <label>Cantidad</label>
-                            <input class="form-control" type="number" maxlength="20" placeholder="Cantidad"
-                                id="txtCantidad" required="">
+                            <input class="form-control" type="number" maxlength="20" placeholder="Cantidad" id="txtCantidad" required="">
                         </div>
 
                     </div>
@@ -300,8 +279,7 @@ Desarrollador: Jean Piere
             <!-- FOOTER -->
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
-                <button type="button" class="btn btn-success" id="btnAgregaMaterial"
-                    onclick="validaFormulario()">Guardar</button>
+                <button type="button" class="btn btn-success" id="btnAgregaMaterial" onclick="validaFormulario()">Guardar</button>
                 <!-- <button type="button" class="btn btn-success" onclick="planosGuardar()">Guardar</button> -->
             </div>
 
@@ -335,20 +313,17 @@ Desarrollador: Jean Piere
 
                             <div class="form-group">
                                 <label>Codigo SAP</label>
-                                <input class="form-control" type="number" maxlength="20" placeholder="Codigo sap"
-                                    id="txtCodigoSap">
+                                <input class="form-control" type="number" maxlength="20" placeholder="Codigo sap" id="txtCodigoSap">
                             </div>
 
                             <div class="form-group">
                                 <label>Características del material</label>
-                                <select class="form-control selectpicker show-menu-arrow" data-live-search="true"
-                                    id="selectMaterialSap" data-size="5"></select>
+                                <select class="form-control selectpicker show-menu-arrow" data-live-search="true" id="selectMaterialSap" data-size="5"></select>
                             </div>
 
                             <div class="form-group">
                                 <label>Centro</label>
-                                <select class="form-control selectpicker show-menu-arrow" data-live-search="false"
-                                    id="selectBeneficioSap" data-size="5"></select>
+                                <select class="form-control selectpicker show-menu-arrow" data-live-search="false" id="selectBeneficioSap" data-size="5"></select>
                             </div>
 
                         </div>
@@ -361,6 +336,7 @@ Desarrollador: Jean Piere
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
                 <button type="button" class="btn btn-success">Actualizar</button>
+                <button type="button" class="btn btn-success">cerrar</button>
             </div>
 
         </div>
@@ -372,17 +348,18 @@ Desarrollador: Jean Piere
 
 <!-- LIBRERIAS -->
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.css" integrity="sha512-3pIirOrwegjM6erE5gPSwkUzO+3cTjpnV9lexlNZqvupR64iZBnOOTiiLPb9M36zpMScbmUNIcHUqKD47M719g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.css" integrity="sha512-3pIirOrwegjM6erE5gPSwkUzO+3cTjpnV9lexlNZqvupR64iZBnOOTiiLPb9M36zpMScbmUNIcHUqKD47M719g==" crossorigin="anonymous" referrerpolicy="no-referrer"
+/>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js" integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js" integrity="sha512-VEd+nq25CkR676O+pLBnDW09R7VQX9Mdiij052gVCp5yVH3jGtH70Ho/UUv4mJDsEdTvqRCFZg0NKGiojGnUCw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
 
-<link   rel="stylesheet" href="js/sweetalert2/sweetalert2.min.css">
+<link rel="stylesheet" href="js/sweetalert2/sweetalert2.min.css">
 <script src="js/sweetalert2/sweetalert2.all.min.js"></script>
 <script src="js/sweetalert2/sweetalert2.min.js"></script>
-<!-- documentacion sweet --> 
+<!-- documentacion sweet -->
 <!-- https://sweetalert2.github.io/#examples -->
 
 <script src="js/jsFuncionesGlobales.js"></script>
