--- a/crudTres.html
+++ b/crudTres.html
@@ -5,7 +5,7 @@
 <div class="container">
     <div class="row">
 
-        <button class="btn btn-success" type="button" data-toggle="modal" data-target="#modalNuevoTransporte" onclick="modalNuevoUsuario()"><i class="fas fa-plus"></i> Nuevo Transporte</button>
+        <button class="btn btn-success" type="button" data-toggle="modal" data-target="#modalNuevoTransporte" onclick="mostrarModalTransporte(1)"><i class="fas fa-plus"></i> Nuevo Transporte</button>
 
     </div>
 </div>
@@ -26,7 +26,7 @@
 
             <!-- HEADER -->
             <div class="modal-header">
-              <center>
+                <center>
                     <h5 class="modal-title" id="exampleModalLabel"><b> Agregar Nuevo Transporte </b> </h5>
                 </center>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
@@ -36,7 +36,12 @@
             <div class="modal-body">
                 <div class="container-fluid">
                     <div class="row">
-                       
+
+                        <div class="form-group col-md-6" id="idDiv">
+                            <label>Id</label>
+                            <input type="text" class="form-control" placeholder="Tipo Transporte" id="id">
+                        </div>
+
                         <div class="form-group col-md-6">
                             <label>Tipo</label>
                             <input type="text" class="form-control" placeholder="Tipo Transporte" id="tipo">
@@ -61,9 +66,10 @@
 
             <!-- FOOTER -->
             <div class="modal-footer">
-                
+
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
                 <button type="button" class="btn btn-success" id="btnAgregaTransporte" onclick="validarFormularioTransporte()">Guardar</button>
+                <button type="button" class="btn btn-success" id="btnModificaTransporte" onclick="modificaTransporte()">Modificar</button>
                 <!-- <button type="button" class="btn btn-success" onclick="planosGuardar()">Guardar</button> -->
             </div>
 
@@ -76,6 +82,9 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.css" integrity="sha512-3pIirOrwegjM6erE5gPSwkUzO+3cTjpnV9lexlNZqvupR64iZBnOOTiiLPb9M36zpMScbmUNIcHUqKD47M719g==" crossorigin="anonymous" referrerpolicy="no-referrer"
 />
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+
+
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js" integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF" crossorigin="anonymous"></script>
